# PersianDate-python-package

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/: __init__.py  main.py  requirements.txt
